[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/art/protochar/sprite_5.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/rubik/Rubik-BlackItalic.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/fonts/rubik/Rubik-Medium.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/fonts/rubik/Rubik-Italic.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://MainMenu.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 28
font_data = ExtResource( 3 )

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1.0
custom_constants/margin_right = 80
custom_constants/margin_top = 60
custom_constants/margin_left = 80
custom_constants/margin_bottom = 60
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 80.0
margin_top = 60.0
margin_right = 945.0
margin_bottom = 540.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 264.0
margin_bottom = 480.0

[node name="Title" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 264.0
margin_bottom = 117.0
custom_fonts/font = SubResource( 1 )
text = "Rollback
Prototype"

[node name="Version" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 121.0
margin_right = 264.0
margin_bottom = 155.0
custom_fonts/font = SubResource( 2 )
text = "version 1.0"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 159.0
margin_right = 264.0
margin_bottom = 480.0
size_flags_vertical = 3
custom_constants/separation = 60
alignment = 1

[node name="LocalVs" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 87.0
margin_right = 264.0
margin_bottom = 130.0
custom_fonts/font = SubResource( 3 )
text = "Local Versus"

[node name="OnlineVs" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 190.0
margin_right = 264.0
margin_bottom = 233.0
custom_fonts/font = SubResource( 3 )
text = "Online Versus"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 268.0
margin_right = 865.0
margin_bottom = 480.0
size_flags_horizontal = 3
custom_constants/separation = 50

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_right = 597.0
margin_bottom = 145.0
custom_fonts/font = SubResource( 4 )
text = "Player One Controls:
A: Move Left
S: Attack
D: Move Right"
align = 2

[node name="Label2" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 195.0
margin_right = 597.0
margin_bottom = 340.0
custom_fonts/font = SubResource( 4 )
text = "Player Two Controls:
J: Move Left
K: Attack
L: Move Right"
align = 2

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 769.81
margin_top = 235.76
margin_right = 809.81
margin_bottom = 275.76
rect_scale = Vector2( -10, 10 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer/LocalVs" to="." method="_on_LocalVs_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer/OnlineVs" to="." method="_on_OnlineVs_pressed"]
